package Behavioral.Interpreter.Interface;

import Behavioral.Interpreter.Classes.Context;

public interface AbstractExpression {
    int interpreter(Context context);
}
